# jldev_rye

./: .JuliaFormatter.toml  .gitignore  CondaPkg.toml  Dockerfile  Makefile  Project.toml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: CI.yml  CompatHelper.yml  JuliaCI.yml  JuliaDocs.yml  PythonCI.yml
docs/: Project.toml  make.jl
docs/src/: index.md
playground/pluto/: loadpy.jl  lorenz.jl  lorenz_julia_jlrye.jl  lorenz_julia_self_contained.jl  lorenz_python_jlrye.jl  lorenz_python_self_contained.jl  lorenz_selfcontained.jl  mylib.py
src/: JLRye.jl
src/julia/: lorenz_attractor.jl
src/python/: lorenz_attractor.py
src/python/jlrye/: __init__.py  julia_interface.py  juliapkg.json  lorenz_attractor.py
test/: runtests.jl
test/julia/: lorenz_attractor.jl
test/julia/references/: lorenz_x.txt  lorenz_y.txt  lorenz_z.txt
test/python/jlrye/: test_jlrye.py
